--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,9 @@
-flask
-numpy
-pandas
-scipy
-xgboost
-pandas
-seaborn
-plotly
-matplotlib
-numpy
-scikit-learn
-scipy
-pickle
+Flask>=2.2.0     
+numpy>=1.24.0     
+pandas>=2.0.0     
+scipy>=1.10.0     
+xgboost>=1.7.0   
+seaborn>=0.12.0   
+plotly>=5.15.0     
+matplotlib>=3.7.0 
+scikit-learn>=1.2.0  
